# immo2

./: .env.example  .gitignore  HANDOFF.md  docker-compose.yml  packages.txt  pyproject.toml  requirements.txt
frontend/: app.py
src/immo2/: config.py
src/immo2/agents/: agent2_extract.py  pipeline.py
src/immo2/api/: main.py  routes.py
src/immo2/cashflow/: __init__.py  engine.py  financing.py  german_tax.py  irr.py  red_flags.py  scoring.py  weg_costs.py
src/immo2/data/: afa_rules.json  grunderwerbsteuer.json  kfw_rates.json
src/immo2/data/mietspiegel/: berlin_2023.json  hamburg_2023.json  munich_2024.json
src/immo2/intake/: pdf_extract.py  playwright_fetch.py
src/immo2/models/: __init__.py  financials.py  listing.py  report.py
src/immo2/rag/: mietspiegel_stubs.py
src/immo2/reporting/: pdf_generator.py
src/immo2/reporting/templates/: report.html.jinja2
tests/: conftest.py  test_cashflow.py  test_extraction_accuracy.py
tests/fixtures/: labeled_listings.json
