[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "immo2"
version = "0.1.0"
description = "AI-powered real estate deal analysis platform for German buy-to-rent investors"
requires-python = ">=3.12"
dependencies = [
    # LLM / Agents
    "anthropic>=0.40.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    # Web fetching
    "playwright>=1.48.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    # PDF parsing
    "pdfplumber>=0.11.0",
    "pymupdf>=1.24.0",
    # Data & models
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    # Database
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    # API backend
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    # UI
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
    "folium>=0.17.0",
    # Geospatial
    "h3>=3.7.0",
    "geopy>=2.4.0",
    "requests>=2.32.0",
    # Report generation
    "jinja2>=3.1.0",
    "weasyprint>=62.0",
    "markdown>=3.7",
    # Utilities
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "rich>=13.9.0",
    "tenacity>=9.0.0",
    "dateparser>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.11.0",
    "ruff>=0.7.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
